# opengl_flower

./: basic.py  flower.py  pyproject.toml  quad.vert  quad_nv.frag  readme.md  readme.txt  square_nv.frag  square_nv.vert  tri.frag  tri.vert  tri_nv.vert
flower/: flower.py  quad.frag  quad_nv.vert  square.frag  square.vert  swarm.vert  swarm_nv.vert  tri_nv.frag
