[tool.poetry]
name = "flower"
version = "0.1.0"
description = ""
authors = ["rastin <rastin@unocity.us>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
pillow = "^6.1"
pyopengl = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
